# QDMI

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .qdmi-config  .typos.toml  CITATION.cff  CMakeLists.txt  Doxyfile  README.md  noxfile.py  qdmi_design.md  test.sh
.github/: codecov.yml  release-drafter.yml  support.md
.github/workflows/: ci.yml  docs.yml  reusable-change-detection.yml  reusable-cpp-ci.yml  reusable-cpp-install-tests.yml  reusable-docs.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  ExternalDependencies.cmake  Findjansson.cmake  Findqinfo.cmake  PrefixHandling.cmake  prefix_defs.txt  qdmi-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  examples.md  faq.md  guide.md  header.html  index.md  layout.xml  qdmi_layout.xml  rationale.md  requirements.txt  style.css  support.md  templates.md
docs/api/: index.md  properties.md  return_codes.md
docs/api/backend/: control.md  index.md  query.md
docs/api/interface/: index.md  query.md  session.md
docs/api/private/: _device.md  _types.md  index.md
examples/: CMakeLists.txt  backend.c  backend.cpp  backend5.c  backend7.cpp  fomac.cpp  fomac.hpp  tool.cpp  tool.hpp
examples/device/: CMakeLists.txt  device_shifted.h.in  prefix.map.in
examples/device/c/: CMakeLists.txt  device.c
examples/device/cxx/: CMakeLists.txt  device.cpp
examples/device/unprefixed_c/: CMakeLists.txt  device.c
examples/device/unprefixed_cxx/: CMakeLists.txt  device.cpp
examples/driver/: CMakeLists.txt  driver.c  driver.cpp  qdmi_example_driver.cpp  qdmi_example_driver.h
examples/driver/dynamic/: CMakeLists.txt  qdmi_example_driver.cpp  qdmi_example_dynamic_driver.cpp
examples/driver/static/: CMakeLists.txt  qdmi_example_static_driver.cpp  qdmi_example_static_driver_macros.h
examples/fomac/: CMakeLists.txt  example_fomac.cpp  example_fomac.hpp  fomac.cpp  fomac.hpp
examples/tool/: CMakeLists.txt  example_tool.cpp  example_tool.hpp  tool.cpp
include/: qdmi.h  qdmi_backend.h  qdmi_device.h  qdmi_internal.h  qdmi_properties.h  qdmi_return_codes.h  qdmi_session.h
include/private/: qdmi_device.h  qdmi_types.h
include/qdmi/: backend.h  client.h  device.h  driver.h  enums.h  interface.h  properties.h  qdmi.h  qdmi_backend.h  return_codes.h
include/qdmi/backend/: control.h  query.h
include/qdmi/client/: control.h  query.h  session.h
include/qdmi/common/: enums.h  types.h
include/qdmi/device/: control.h  query.h  types.h
include/qdmi/driver/: driver.h  session.h  types.h
include/qdmi/interface/: control.h  query.h  session.h
include/qdmi/private/: _device.h  _types.h
include/qdmi_v2/: qdmi_device.h  qdmi_library.h  qdmi_return_codes.h  qdmi_session.h  qdmi_v2.h
include/qdmi_v2/details/: qdmi_globals.h  qdmi_types.h
inputs/: Bell_circuit.bc  basic_circuit.bc  basic_circuit.ll  circuit_excited.bc  circuit_ground.bc  circuit_hadamard_decomposed.bc  conf.json  props.json
src/: CMakeLists.txt  qdmi_allocation.c  qdmi_backend_ibm.c  qdmi_backend_ibm.h  qdmi_backend_q20.c  qdmi_backend_q20.h  qdmi_backend_q5.c  qdmi_backend_q7.c  qdmi_backend_qlm.c  qdmi_backend_qlm.h  qdmi_backend_wmi.c  qdmi_backend_wmi.h  qdmi_backend_wmi_real.c  qdmi_backend_wmi_real.h  qdmi_backend_wmi_sim.c  qdmi_backend_wmi_sim.h  qdmi_core.c  qdmi_device.c  qdmi_internal.c  qdmi_internal.h  qdmi_session.c  qdmi_stubs.c
src/client/: control.c  session.c
src/interface/: control.c  query.c  session.c
src/private/: _device.c  _device.h  _types.h  qdmi_device.c  qdmi_internal.h
src/qdmi_v2/: CMakeLists.txt  qdmi_device.c  qdmi_library.c  qdmi_session.c  qdmi_v2.c
src/qdmi_v2/details/: qdmi_globals.c
templates/: CMakeLists.txt
templates/C/: CMakeLists.txt
templates/C++/: CMakeLists.txt
templates/C++/cmake/: ExternalDependencies.cmake
templates/C++/src/: CMakeLists.txt  my_backend.cpp
templates/C++/test/: CMakeLists.txt  test_my_backend.cpp  test_my_device.cpp
templates/C/cmake/: CMakeLists.txt  ExternalDependencies.cmake
templates/C/src/: CMakeLists.txt  backend.c  my_backend.c
templates/C/test/: CMakeLists.txt  test_functions.c  test_functions.cpp  test_my_backend.cpp  test_my_device.cpp
templates/device/: CMakeLists.txt
templates/device/c/: CMakeLists.txt
templates/device/c/cmake/: ExternalDependencies.cmake
templates/device/c/src/: CMakeLists.txt  my_device.c
templates/device/c/test/: CMakeLists.txt  test_my_device.cpp
templates/device/cmake/: ExternalDependencies.cmake
templates/device/cxx/: CMakeLists.txt
templates/device/cxx/cmake/: ExternalDependencies.cmake
templates/device/cxx/src/: CMakeLists.txt  my_device.cpp
templates/device/cxx/test/: CMakeLists.txt
templates/device/src/: CMakeLists.txt  my_device.cpp
templates/device/test/: CMakeLists.txt  test_my_device.cpp
test/: CMakeLists.txt  backend5.c  backend7.c  backend7.cpp  backend7.h  main.c  openclose.c  test_defs.cpp  test_functions.c  test_impl.cpp  test_qdmi.cpp
test/qdmi_v2/: CMakeLists.txt  backend_v2.c  test.c
test/utils/: CMakeLists.txt  test_defs.cpp  test_defs.cpp.in  test_impl.cpp  test_impl.hpp  test_impl_direct.cpp  test_impl_direct.hpp
testing/: openclose.c
utils/: prefix_defs.h.in
