# ------------------------------------------------------------------------------
# Part of the MQSS Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# ------------------------------------------------------------------------------

add_subdirectory(c)
add_subdirectory(cxx)
add_subdirectory(unprefixed_c)
add_subdirectory(unprefixed_cxx)
