# ------------------------------------------------------------------------------
# Part of the MQSS Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://github.com/Munich-Quantum-Software-Stack/QDMI/blob/develop/LICENSE
# for license information. SPDX-License-Identifier: Apache-2.0 WITH
# LLVM-exception
# ------------------------------------------------------------------------------

add_subdirectory(c)
add_subdirectory(cxx)
